--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
 EXPRESS_PORT=8080
 DB_URI=mongodb://mongo:27017/music-db
-DB_USER=eugenesolovyev92@gmail.com
-DB_PASSWORD=miensk
+DB_USER=
+DB_PASSWORD=
