--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,10 @@
 EXPRESS_PORT=8080
 DB_URI=mongodb://mongo:27017/music-db
-DB_USER=eugenesolovyev92@gmail.com
-DB_PASSWORD=miensk
+DB_USER=
+DB_PASSWORD=
+AUTH=yes
+MONGODB_ADMIN_USER=
+MONGODB_ADMIN_PASS=
+MONGODB_APPLICATION_DATABASE=music-db
+MONGODB_APPLICATION_USER=
+MONGODB_APPLICATION_PASS=
